aggiunto header, logo, link e bottone accedi

--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- intestazione pagina -->
+    <header>
+        <div class="container">
+            <img class="logo-discord" src="img/logo.svg" alt="logo-discord">
+                <nav>
+                    <div class="link">
+                        <ul>
+                            <li><a href="">Scarica</a></li>
+                            <li><a href="">Perchè Discord</a></li>
+                            <li><a href="">Nitro</a></li>
+                            <li><a href="">Sicurezza</a></li>
+                            <li><a href="">Asssitenza</a></li>
+                         </ul>
+                     </div>
+                </nav>
+            <button class="login">Accedi</button>
+        </div>
+    </header>
+    <!-- /intestazione pagina -->
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
