aggiunta sezione hero, titolo ,bottoni e sfondo

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>discord</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- intestazione pagina -->
     <header>
-        <div class="container">
+        <div class="header-container">
             <img class="logo-discord" src="img/logo.svg" alt="logo-discord">
                 <nav>
                     <div class="link">
@@ -23,10 +26,33 @@
                          </ul>
                      </div>
                 </nav>
-            <button class="login">Accedi</button>
+            <button class="btn-login">Accedi</button>
         </div>
     </header>
     <!-- /intestazione pagina -->
+    <!-- sezione hero  -->
+    <hero>
+        <div class="hero-container">
+            <div class="title">
+                <h1>Il tuo posto per parlare</h1>
+            </div>
+            <div class="description">
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica
+                    mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo
+                    assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+            </div>
+            <!-- bottoni per apertura discord  -->
+            <div class="download">
+                <button class="btn-white">&#129047; Scarica per Mac</button>
+                <button class="btn-black">Apri nel tuo browser</button>
+            </div>
+            <!-- bottoni per apertura discord  -->
+        </div>
+        <!-- sezione hero  -->
+
+                
+                    
+    </hero>
 
     <main>
 
