aggiunta quarta sezione con immagine e titolo

--- a/index.html
+++ b/index.html
@@ -85,10 +85,8 @@
                             <div class="second">
                                     <h2>Da pochi a un fandom </h2>
                                     <div class="paragraph">
-                                        <p>I server Discord sono organizzati in
-                                            canali tematici in cui puoi collaborare,
-                                            condividere o semplicemente parlare
-                                            della tua giornata senza intasare una chat di gruppo.</p>
+                                        <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi instantaneamente senza dover chiamare.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -129,7 +127,24 @@
             </div>
         </section>
         <!-- /terza sezione  -->
-        
+        <!-- quarta sezione  -->
+        <section id="final">
+            <div class="cic">
+            <div class="title-2">
+            <h1>Tecnlogia affidabile per tenersi in contatto</h1>
+            </div>
+            <div class="paragraph-2">
+                <p>Video e audio a bassa latenza ti fanno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+            </div>
+            <img class="img-3" src="img/item4-big.svg" alt="">
+            <div class="paragraph-3">
+                <h3>Pronto ad iniziare la tua avventura?</h3>
+                
+            </div>  
+        </div>
+
+        </section>
+        <!-- quarta sezione  -->
     </main>
     <!-- /corpo del sito  -->
 
